--- a/storm_web/assignments/css/index_tbd.css
+++ b/storm_web/assignments/css/index_tbd.css
@@ -1,4 +1,34 @@
 h1 {
-    font-family:cursive;
-    font-size: 20px
+    font-family:"Raleway", sans-serif;
+    font-size: 50px
 }
+
+ul {
+    font-family: "Raleway", sans-serif;
+    list-style-type: none;
+    margin: 0px;
+    padding: 0px;
+    width: 200px;
+    border: 1px solid #555
+}
+
+li a {
+    display: block;
+    color:whitesmoke;
+    padding: 8px 30px;
+    width: 200px;
+    background-color: #22252C 
+    
+}
+
+li a.active {
+    background-color: #E14658;
+        color:floralwhite
+}
+
+li a:hover:not(.active) {
+    background-color:#3F3250;
+    color:white
+    
+}
+
