--- a/storm_web/assignments/css/index_tbd.css
+++ b/storm_web/assignments/css/index_tbd.css
@@ -1,22 +1,40 @@
+body{
+    margin: 0;
+}
 h1 {
     font-family:"Raleway", sans-serif;
-    font-size: 50px
+    font-size: 50px;
+    margin: 10px
+    position: fixed
+}
+
+h2 {
+    font-family: "Raleway", sans-serif
+}
+
+h3 {
+    font-family: "Raleway", sans-serif
 }
 
 ul {
     font-family: "Raleway", sans-serif;
     list-style-type: none;
-    margin: 0px;
-    padding: 0px;
-    width: 200px;
-    border: 1px solid #555
+    margin: 0;
+    padding: 0;
+    width: 25%;
+    background-color: whitesmoke;
+    position: fixed;
+    height: 100%;
+    overflow: auto;
+
+
 }
 
 li a {
     display: block;
+    width:200px;
     color:whitesmoke;
-    padding: 8px 30px;
-    width: 200px;
+    padding: 8px 16px;
     background-color: #22252C 
     
 }
@@ -32,3 +50,7 @@ li a:hover:not(.active) {
     
 }
 
+p not(.active)
+{
+    
+}
