--- a/storm_web/assignments/css/index_tbd.css
+++ b/storm_web/assignments/css/index_tbd.css
@@ -1,38 +1,40 @@
-body{
-    margin: 0;
-}
+
 h1 {
     font-family:"Raleway", sans-serif;
     font-size: 50px;
-    margin: 10px
-    position: fixed
+    padding-bottom: 0px;
+    position:relative;
+     margin-left:26%;padding:0px 0px;position:inherit
 }
 
 h2 {
-    font-family: "Raleway", sans-serif
+    font-family: "Raleway", sans-serif;
+   margin-left:25%;padding:5px 16px;position:fixed";
 }
 
 h3 {
-    font-family: "Raleway", sans-serif
+    font-family: "Raleway", sans-serif;
+    pointer-events: none;
+     margin-left:25%;padding:5px 16px;position:fixed";
 }
 
 ul {
     font-family: "Raleway", sans-serif;
     list-style-type: none;
-    margin: 0;
-    padding: 0;
+    margin:0;
+    padding:0;
     width: 25%;
     background-color: whitesmoke;
     position: fixed;
     height: 100%;
-    overflow: auto;
+    overflow:auto;
 
 
 }
 
 li a {
     display: block;
-    width:200px;
+    width:2-0px;
     color:whitesmoke;
     padding: 8px 16px;
     background-color: #22252C 
@@ -50,7 +52,11 @@ li a:hover:not(.active) {
     
 }
 
-p not(.active)
-{
-    
+audio {
+    margin-top: 70%;
+    margin-left: 26%
+}
+
+p {
+     margin-left:25%;padding:5px 16px;position:fixed";
 }
