--- a/storm_web/css/custom-w3.css
+++ b/storm_web/css/custom-w3.css
@@ -53,3 +53,11 @@
 
         
 }
+
+.typopara {
+    font-family: raleway;
+    padding-top: 20px;
+    padding-bottom: 50px;
+    padding-left: 50px;
+    padding-right: 50px;
+}
