--- a/storm_web copy/css/w3.css
+++ b/storm_web copy/css/w3.css
@@ -63,7 +63,7 @@ img{margin-bottom:-5px}a{color:inherit}
 .w3-badge{border-radius:50%}
 ul.w3-ul{list-style-type:none;padding:0;margin:0}ul.w3-ul li{padding:6px 2px 6px 16px;border-bottom:1px solid #ddd}ul.w3-ul li:last-child{border-bottom:none}
 .w3-tooltip,.w3-display-container{position:relative}.w3-tooltip .w3-text{display:none}.w3-tooltip:hover .w3-text{display:inline-block}
-.w3-navbar{list-style-type:none;margin:0;padding:0;overflow:hidden}
+.w3-navbar{list-style-type:none;margin:0;padding:0;overflow:}
 .w3-navbar li{float:left}.w3-navbar li a,.w3-navitem{display:block;padding:8px 16px}.w3-navbar li a:hover{color:#000;background-color:#ccc}
 .w3-navbar .w3-dropdown-hover,.w3-navbar .w3-dropdown-click{position:static}
 .w3-navbar .w3-dropdown-hover:hover,.w3-navbar .w3-dropdown-hover:first-child,.w3-navbar .w3-dropdown-click:hover{background-color:#ccc;color:#000}
@@ -344,4 +344,12 @@ input[type=checkbox].w3-check:disabled+.w3-validate,input[type=radio].w3-radio:d
 
 .coachella {
     margin-bottom: 550px
+}
+
+.w3-navbar {
+    
+}
+
+.w3-navbar {
+    
 }
